# SCNN_Pytorch

./: .gitignore  LICENSE  README.md  config.py  demo_test.py  model.py  net.py  requirements.txt  test.py  test_CULane.py  test_tusimple.py  train.py
dataset/: CULane.py  Tusimple.py  __init__.py
experiments/exp0/: cfg.json
experiments/exp10/: cfg.json
experiments/vgg_SCNN_DULR_w9/: cfg.json  t7_to_pt.py
utils/: lr_scheduler.py  tensorboard.py
utils/lane_evaluation/: CMakeLists.txt  Makefile  Run.sh
utils/lane_evaluation/CULane/: CMakeLists.txt  Run.sh
utils/lane_evaluation/CULane/src/: lane_compare.cpp
utils/lane_evaluation/src/: evaluate.cpp
utils/lane_evaluation/tusimple/: lane.py
utils/prob2lines/: getLane.py
utils/transforms/: __init__.py  data_augmentation.py  transforms.py
